added contact and donate pages

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -5,7 +5,7 @@
         "sports": "Sportif et coach",
         "lucid": "Rêveur lucide",
         "descriptions": {
-            "default": "Default description",
+            "default": "Très curieux, j'ai exploré et expérimenté avec différents domaines et activités. C'est dans ces 4 que je me suis spécialisé. J'y ai acquéris de nombreuses connaissances, compétences et me considère maintenant légitime pour proposer des services.",
             "dev": "Diplômé de l'école d'ingénieurs UTC, 3 ans d'apprentissage en entreprise (Alternance) et de nombreux projets réalisés; j'ai acquis de nombreuses connaissances générales de développement ainsi que spécifiques sur de nombreuses technologies.",
             "magician": "Magicien blabla",
             "sports": "Sports blabla",
